fixed Marginal gap in Hero, Footer section

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,10 @@
 
 .footer {
   background: rgb(20, 20, 20);
+  height: auto;
+  width: 100vw;
   color: rgb(231, 210, 153);
-  padding: 40px 0 10px;
+  padding-top: 10px;
   margin-top: 40px;
   border-top: 1px solid rgba(255, 219, 17, 0.2);
 }
