--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body{
   background-color: #111;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .container{
   width: full;
   min-height: 100vh;
@@ -19,4 +23,7 @@ body{
 html,body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   overflow-x:hidden ;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
